# telegram-clipboard-listener

./: .env.example  .gitignore  LICENSE  README.md  database.py  monitor.py  pyproject.toml
test_scripts/: getchannel.py  send_message.py  test_userbot.py
